FEAT:made a class

--- a/PROTOTYPE/PYTHON/solver.ipynb
+++ b/PROTOTYPE/PYTHON/solver.ipynb
@@ -292,8 +292,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3f3ba906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class sudoko:\n",
+    "    def __init__(self,questions,solution) -> None:\n",
+    "        self.rHash=[set() for _ in range(9)]\n",
+    "        self.cHash=[set() for _ in range(9)]\n",
+    "        self.boxHash=[set() for _ in range(9)]\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        self.question=questions\n",
+    "        self.solution=solution\n",
+    "\n",
+    "    def display(self,mat):\n",
+    "        for row in mat:\n",
+    "            print(row)\n",
+    "        print('-----------')\n",
+    "\n",
+    "    def boardToString(self,mat):\n",
+    "        s=\"\"\n",
+    "        for row in mat:\n",
+    "            s+=''.join(row)\n",
+    "        return s\n",
+    "\n",
+    "    def stringToMatrix(self,s):\n",
+    "        return [[c for c in s[i:i+9]] for i in range(0,len(s),9)]\n",
+    "\n",
+    "    \n",
+    "    def backtrack(self,r,c,board):\n",
+    "        if r==9:\n",
+    "            return True\n",
+    "        if c==9:\n",
+    "            return self.backtrack(r+1,0,board)\n",
+    "        if board[r][c]!=\"0\":\n",
+    "            return self.backtrack(r,c+1,board)\n",
+    "        for idx in map(str,range(1,10)):\n",
+    "            bidx=(r//3)*3+c//3\n",
+    "            if board[r][c]==\"0\" and idx not in self.rHash[r] and idx not in self.cHash[c] and idx not in self.boxHash[bidx]:\n",
+    "                board[r][c]=idx\n",
+    "                self.rHash[r].add(idx)\n",
+    "                self.cHash[c].add(idx)\n",
+    "\n",
+    "                if self.backtrack(r,c,board):\n",
+    "                    return True\n",
+    "                board[r][c]=\"0\"\n",
+    "                self.rHash[r].remove(idx)\n",
+    "                self.cHash[c].remove(idx)\n",
+    "        return False\n",
+    "\n",
+    "    def solveIt(self):\n",
+    "        mat=self.stringToMatrix(self.question)\n",
+    "\n",
+    "        for i in range(len(mat)):\n",
+    "            for j in range(len(mat[0])):\n",
+    "                self.rHash[i].add(mat[i][j])\n",
+    "                self.cHash[j].add(mat[i][j])\n",
+    "                self.boxHash[(i//3)*3+j//3].add(mat[i][j])\n",
+    "        \n",
+    "        self.backtrack(0,0,mat)\n",
+    "        finalAns=self.boardToString(mat)\n",
+    "        #print(finalAns==self.solution)\n",
+    "        return finalAns==self.solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "101592c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90/98\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df=pd.read_csv('sudoko.csv')\n",
+    "\n",
+    "\n",
+    "print(str(sum(sudoko(df.iloc[i,0],df.iloc[i,1]).solveIt() for i in range(len(df))))+\"/\"+str(len(df)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21db7558",
    "metadata": {},
    "outputs": [],
    "source": []
